# kogodjan

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  data.js  mid_week.sql  run.bat
algo_diff/: Cargo.toml  README.md
algo_diff/integration/: main.rs
algo_diff/src/: lib.rs
algo_diff/src/graphs/: mod.rs
algo_diff/src/graphs/element_wise/: add_graph.rs  div_graph.rs  mod.rs  mul_graph.rs  sub_graph.rs
algo_diff/src/graphs/operations/: copy_graph.rs  cross_entropy_graph.rs  dot_graph.rs  linear_graph.rs  mod.rs  mse_graph.rs  sigmoid_graph.rs  softmax_graph.rs  tanh_graph.rs
algo_diff/src/maths/: matrix_helpers.rs  mod.rs
algo_diff/src/old/: lib.rs
algo_diff/src/old/graph/: finite_difference.rs  input.rs  mod.rs
algo_diff/src/old/nn/: losses.rs  lstm.rs  mod.rs
algo_diff/src/old/node/: add_node.rs  concatinate_node.rs  div_node.rs  dot_node.rs  gradient_accumulator.rs  hogwild_parameter.rs  index_input_node.rs  input_node.rs  mod.rs  mul_node.rs  output_node.rs  parameter_node.rs  slice_node.rs  sub_node.rs  vector_dot_node.rs
algo_diff/src/old/node/operators/: exp_node.rs  index_node.rs  log_node.rs  log_softmax_node.rs  mod.rs  neg_node.rs  relu_node.rs  sigmoid_node.rs  softmax_node.rs  square_node.rs  sum_node.rs  tanh_node.rs  transpose_node.rs
algo_diff/src/old/node/variable/: mod.rs
algo_diff/src/old/optim/: adagrad.rs  mod.rs  sgd.rs
auto_diff/: Cargo.toml
docs/: all.html  index.html  search-index.js  settings.html  sidebar-items.js  source-files.js
docs/activations/: constant.FLOAT_SIZE_100.html  constant.FLOAT_SIZE_1000.html  fn.hardlim.html  fn.logsig.html  fn.poslin.html  fn.satlin.html  sidebar-items.js  type.Activator.html
docs/architectures/: index.html  sidebar-items.js
docs/kongodjan/: index.html
gui/: Cargo.toml
neural_network/: Cargo.toml
neural_network/integration/: main.rs
neural_network/src/: lib.rs
neural_network/src/activator/: mod.rs
neural_network/src/layers/: fully_connected.rs  loss.rs  mod.rs
neural_network/src/layers/lstm/: mod.rs
neural_network/src/layers/lstm/cell/: mod.rs
neural_network/src/loss/: mod.rs
neural_network/src/lotto/: mod.rs
neural_network/src/lotto/layers/: hidden.rs  mod.rs  softmax.rs
neural_network/src/networks/: feed_forward.rs  mod.rs
neural_network/src/networks/lstm/: many_to_many.rs  mod.rs
neural_network/src/utils/: data_iter.rs
src/: lib.rs
tests/: linear_regression.rs  perceptron.rs
(+187 files in other folders)
