[package]
name = "kongodjan"
version = "0.1.0"
authors = ["djedou"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# nalgebra = {version = "0.20", features = ["serde-serialize"]}
#rand = "0.8.3"
random-number = "0.1.6"
jfs = "0.6.2"
serde = { version = "1.0.117", features = ["derive"] }
djed_maths = { git = "https://github.com/djedou/djed_maths.git"}
serde_derive = "1.0.117"
serde_json = "1.0.59"
ndarray = "0.15.3"